# hlox

./: LICENSE  README.md  hlox.cabal  stack.yaml
app/: Main.hs
core/: test.lox
examples/: A.lox  B.lox  C.lox  D.lox  List.lox  arrays.lox  assignment.lox  await.lox  bill-and-jane.lox  bump-cr-year  church-objects.lox  constructors.lox  count-cat.lox  counter.lox  destructuring.lox  ex-test.lox  fib.lox  fibfun.lox  fibmemo.lox  fibtail.lox  fun-exprs.lox  fun-scope.lox  iteration.lox  lists.lox  loops.lox  loud-license.lox  module.lox  one-million-numbers.lox  parallel-add.lox  pattern-args.lox  read-license.lox  static-methods.lox  super-class.lox  tricky-loops.lox  while-loops.lox  word-count.lox  yield.lox
lint/: Lint.hs
src/: Lox.hs
src/Lox/: Analyse.hs  Builtins.hs  Environment.hs  Interpreter.hs  Language.hs  Optimise.hs  Parser.hs  Scanner.hs  SeqEnv.hs  Syntax.hs  Transform.hs  VectorEnv.hs
src/Lox/Builtins/: Array.hs  IO.hs  Map.hs  Object.hs  Random.hs  Regex.hs  String.hs  Thread.hs
src/Lox/Core/: Array.hs
src/Lox/Interpreter/: Types.hs
