name:                hlox
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hlox#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=2

library
  hs-source-dirs:      src
  exposed-modules:     Lox
  other-modules:       Lox.Scanner
                      ,Lox.Language
                      ,Lox.Parser
                      ,Lox.Syntax
                      ,Lox.Interpreter
                      ,Lox.Environment
                      ,Lox.Core.Array
                      ,Lox.Builtins
                      ,Lox.Builtins.Array
                      ,Lox.Builtins.Object
                      ,Lox.Builtins.Random
                      ,Lox.Builtins.IO
                      ,Lox.Transform
                      ,Lox.Analyse
                      ,Lox.SeqEnv
                      ,Lox.VectorEnv
  build-depends:       base >= 4.7 && < 5
                     , text
                     , mtl
                     , syb
                     , hashable
                     , unordered-containers
                     , clock
                     , haskeline
                     , vector
                     , random
                     , containers >= 0.5.8
                     , bifunctors
                     , data-default
                     , filepath
  default-language:    Haskell2010

executable hlox-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hlox
  default-language:    Haskell2010

test-suite hlox-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hlox
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hlox
